modify delete endpoint
